# IINTS-SDK

./: .flake8  .gitignore  API_STABILITY.md  CHANGELOG.md  LICENSE  Makefile  PRIVACY_POLICY.md  PUBLIC_DOCUMENTATION.md  README.md  SDK_COMPREHENSIVE_GUIDE.md  TECHNICAL_README.md  TERMS_OF_USE.md  manual_analysis.txt  mkdocs.yml  mypy.ini  plot_results.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sbom.json
.github/workflows/: docs-site.yml  health-badges.yml  mdmp-sync.yml  notebook-bake.yml  publish-pypi.yml  python-package.yml  release.yml
data_packs/: DATASETS.md  DATA_SCHEMA.md
docs/: COMPREHENSIVE_GUIDE.md  DOCUMENTATION_INDEX.md  DUAL_REPO_WORKFLOW.md  EVIDENCE_BASE.md  GETTING_STARTED.md  IINTS_AF_TRANSITION_PLAN.md  MDMP.md  MDMP_FULL_GUIDE.md  MDMP_QUICKSTART.md  OFFICIAL_MANUAL.md  PLAIN_LANGUAGE_GUIDE.md  PUBLIC_DOCUMENTATION.md  README.md  SCIENCE_EXPO_DEMO_SCRIPT.md  TECHNICAL_README.md  emulation_references.md  index.md
docs/manuals/: IINTS-AF_SDK_Manual.md  IINTS-AF_SDK_Manual_Improved.md  IINTS-AF_SDK_Manual_Improved_clean.md  pandoc.yaml  preamble.tex
docs/releases/: INDEX.md  v0.0.18.md  v0.1.15.md  v0.1.17.md  v0.1.18.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.4.md  v0.1.5.md
docs/stylesheets/: extra.css
docssphinx/: Makefile  conf.py  index.rst
docssphinx/source/: iints.analysis.algorithm_xray.rst  iints.analysis.clinical_benchmark.rst  iints.analysis.clinical_metrics.rst  iints.analysis.clinical_tir_analyzer.rst  iints.analysis.diabetes_metrics.rst  iints.analysis.edge_performance_monitor.rst  iints.analysis.explainability.rst  iints.analysis.explainable_ai.rst  iints.analysis.hardware_benchmark.rst  iints.analysis.metrics.rst  iints.analysis.rst  iints.analysis.sensor_filtering.rst  iints.analysis.validator.rst  iints.api.base_algorithm.rst  iints.api.rst  iints.api.template_algorithm.rst  iints.cli.cli.rst  iints.cli.rst  iints.core.algorithms.battle_runner.rst  iints.core.algorithms.correction_bolus.rst  iints.core.algorithms.discovery.rst  iints.core.algorithms.rst  (+35 more)
examples/: audit_and_report.py  broken_algorithm_example.py  clinical_reality_check.py  comparative_benchmarking.py  create_population_graphics.py  data_import.py  demo_quickstart_flow.py  demo_showcase.py  experiment.py  generate_clinical_report.py  generate_excel_summary.py  main.py  manual_scenario_editor.py  master_dashboard.py  matlab_control_integration.py  mysecondtest_algorithm.py  mytest_algorithm.py  population_runner.py  quickstart_benchmark.ipynb  real_time_dashboard.py  run_comprehensive_analysis.py  run_final_analysis.py  run_population_study.py  run_reverse_engineering.py  temp_battle_test.py  test_autonomous_learning.py  test_comparative_benchmarking.py  test_terminal_app.py  test_validation.py  uncertainty_quantification.py  validate_system.py  visualize_algorithm_xray.py
research/: README.md  datasheet.md  evaluate_predictor.py  export_predictor.py  model_card.md  prepare_aide_cgm.py  prepare_azt1d.py  prepare_hupa_ucm.py  prepare_ohio_t1dm.py  synthesize_dataset.py  train_predictor.py
resultaten/: stress_test_audit.csv  stress_test_results.csv
scenarios/: example_scenario.json
scripts/: run_demo.sh  run_lint.sh  run_tests.sh
tests/: conftest.py  system_test.py  test_bergman.py  test_population.py
tools/: attach_ai_predictions.py  build_manuals.sh  create_logo.py  find_demo_window.py  generate_manual_from_markdown.py  glucose_visualizer.py  import_ohio.py  import_openaps.py  plot_results.py  quick_report.py  select_demo_day.py  select_demo_day_with_model.py  stress_test_analysis.py
(+225 files in other folders)
