[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iints-sdk-python35" 
version = "0.0.18"
authors = [
  { name="Rune Bobbaers", email="rune.bobbaers@gmail.com" },
]
description = "A pre-clinical Edge-AI SDK for diabetes management validation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fpdf2>=2.8.0",
    "matplotlib>=3.5.0",
    "numpy>=1.24.0",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "pillow>=12.1.1",
    "pydantic>=2.0.0",
    "PyYAML",
    "rich>=12.0.0",
    "scipy>=1.9.0",
    "seaborn>=0.11.0",
    "typer[all]",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "flake8",
  "mypy",
  "pandas-stubs",
  "types-PyYAML",
  "types-psutil",
]
torch = [
  "torch>=1.9.0",
]
nightscout = [
  "py-nightscout",
]
research = [
  "torch>=2.0.0",
  "pyarrow>=12.0.0",
  "h5py>=3.10.0",
  "onnx>=1.16.0",
  "onnxscript>=0.1.0",
]

[project.scripts]
iints = "iints.cli.cli:app"

[project.entry-points."iints.algorithms"]
"PID Controller" = "iints.core.algorithms.pid_controller:PIDController"
"Fixed Basal Bolus" = "iints.core.algorithms.fixed_basal_bolus:FixedBasalBolus"
"Correction Bolus" = "iints.core.algorithms.correction_bolus:CorrectionBolusAlgorithm"
"Standard Pump" = "iints.core.algorithms.standard_pump_algo:StandardPumpAlgorithm"
"Mock Constant Dose" = "iints.core.algorithms.mock_algorithms:ConstantDoseAlgorithm"
"Mock Random Dose" = "iints.core.algorithms.mock_algorithms:RandomDoseAlgorithm"

[project.urls]
"Homepage" = "https://github.com/python35/IINTS-SDK"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iints = [
  "templates/*.py",
  "templates/scenarios/*.json",
  "assets/*.png",
  "data/*.json",
  "data/virtual_patients/*.yaml",
  "data/demo/*.csv",
  "presets/*.json",
]
